# compiler

./: .gitignore  CMakeLists.txt  README.md  api.py  interface.py  main.cpp  test.py  test.txt
Aux/: reserved.txt  symbols.txt
Lexical/: Lexical.cpp  Lexical.h
SymbolTable/: SymbolTable.cpp  SymbolTable.h
Tests/LexicalTest/: LexicalTest.cpp
Tests/SymbolTableTest/: SymbolTableTest.cpp
Token/: Token.cpp  Token.h
code/: code.txt  output.txt
test_files/lexico/: teste_1.txt
test_files/sintatico/: ExtraS.txt  sint2.txt  sint3.txt
